--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,3 @@
-[submodule "3rdparty/speex"]
-	path = 3rdparty/speex
-	url = git://git.xiph.org/speex.git/
-[submodule "3rdparty/celt"]
-	path = 3rdparty/celt
-	url = git://git.xiph.org/celt.git/
-[submodule "3rdparty/protobuf"]
-	path = 3rdparty/protobuf
-	url = git://github.com/mkrautz/protobuf-objc-2.2.0-mirror.git
+[submodule "MumbleKit"]
+	path = MumbleKit
+	url = git://mumble.git.sourceforge.net/gitroot/mumble/mumblekit
