Add FMDB to project.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "MumbleKit"]
 	path = MumbleKit
 	url = git://mumble.git.sourceforge.net/gitroot/mumble/mumblekit
+[submodule "Dependencies/fmdb"]
+	path = Dependencies/fmdb
+	url = http://github.com/kballard/fmdb.git
