--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Dependencies/fmdb"]
 	path = Dependencies/fmdb
 	url = http://github.com/kballard/fmdb.git
+[submodule "Dependencies/openssl"]
+	path = Dependencies/openssl
+	url = git://github.com/mkrautz/openssl-mirror.git
