BuildConfig: flip the Opus switch.

--- a/BuildConfig/Base.xcconfig
+++ b/BuildConfig/Base.xcconfig
@@ -19,7 +19,7 @@ USER_HEADER_SEARCH_PATHS =
 HEADER_SEARCH_PATHS = ${PROJECT_DIR}/MumbleKit/src/ ${PROJECT_DIR}/Dependencies/fmdb/src/ ${PROJECT_DIR}/Dependencies/gtm/ ${PROJECT_DIR}/Dependencies/MKNumberBadgeView/ ${PROJECT_DIR}/Dependencies/plcrashreporter
 FRAMEWORK_SEARCH_PATHS = 
 
-OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1
+OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1 -DOPUS_ENABLED
 
 GCC_WARN_ABOUT_RETURN_TYPE = YES
 GCC_WARN_UNUSED_VARIABLE = YES
