--- a/BuildConfig/Base.xcconfig
+++ b/BuildConfig/Base.xcconfig
@@ -2,7 +2,7 @@
 // Use of this source code is governed by a BSD-style
 // license that can be found in the LICENSE file.
 
-ARCHS = $(ARCHS_STANDARD_32_BIT)
+ARCHS = armv7
 SDKROOT = iphoneos
 
 MACOSX_DEPLOYMENT_TARGET = 10.7
