Add iPad and Retina iPad icons. Thanks Karsten Bruns!

--- a/Source/Info.plist
+++ b/Source/Info.plist
@@ -14,6 +14,8 @@
 	<array>
 		<string>Icon.png</string>
 		<string>Icon@2x.png</string>
+		<string>IconPad.png</string>
+		<string>IconPad@2x.png</string>
 	</array>
 	<key>CFBundleIcons</key>
 	<dict>
@@ -23,6 +25,8 @@
 			<array>
 				<string>Icon.png</string>
 				<string>Icon@2x.png</string>
+				<string>IconPad.png</string>
+				<string>IconPad@2x.png</string>
 			</array>
 			<key>UIPrerenderedIcon</key>
 			<true/>
