--- a/BuildConfig/Base.xcconfig
+++ b/BuildConfig/Base.xcconfig
@@ -16,7 +16,7 @@ TARGETED_DEVICE_FAMILY = 1 // iPhone
 
 ALWAYS_SEARCH_USER_PATHS = NO
 USER_HEADER_SEARCH_PATHS = 
-HEADER_SEARCH_PATHS = ${PROJECT_DIR}/MumbleKit/src/ ${PROJECT_DIR}/Dependencies/fmdb/src/ ${PROJECT_DIR}/Dependencies/gtm/ ${PROJECT_DIR}/Dependencies/MKNumberBadgeView/ ${PROJECT_DIR}/Dependencies/plcrashreporter
+HEADER_SEARCH_PATHS = "${PROJECT_DIR}/MumbleKit/src/" "${PROJECT_DIR}/Dependencies/fmdb/src/" "${PROJECT_DIR}/Dependencies/gtm/" "${PROJECT_DIR}/Dependencies/MKNumberBadgeView/" "${PROJECT_DIR}/Dependencies/plcrashreporter"
 FRAMEWORK_SEARCH_PATHS = 
 
 OTHER_CFLAGS = -DNS_BLOCK_ASSERTIONS=1
